--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </a>
       </li>
     </ul>
-  </div>https://www.youtube.com/watch?v=I18TNwZ2Nqg&t=2464s
+  </div>
   <div class="theme">
     <h2 class="title-theme">Github</h2>
     <ul class="list">
