feat: add links to 21 fabruary

--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
                 alt="">https://habr.com/ru/companies/timeweb/articles/684718/</a>
             </li>
             <li class="item">
-              <div class="item-title"></div>
-              <a class="item-link" href="" target="_blank" alt=""></a>
+              <div class="item-title">Get started with React.js & React Router 6+ (видео, 3,5 часа)</div>
+              <a class="item-link" href="https://www.youtube.com/watch?v=4baq00tHfmA" target="_blank" alt="">https://www.youtube.com/watch?v=4baq00tHfmA</a>
             </li>
             <li class="item">
               <div class="item-title"></div>
@@ -832,12 +832,12 @@
                 alt="">https://github.com/PacktPublishing/50-Projects-In-50-Days---HTML-CSS-JavaScript</a>
             </li>
             <li class="item">
-              <div class="item-title"></div>
-              <a class="item-link" href="" target="_blank" alt=""></a>
+              <div class="item-title">Канал SOER - советы как лучше развиваться и стать отличным программистом</div>
+              <a class="item-link" href="https://www.youtube.com/@S0ERDEVS" target="_blank" alt="">https://www.youtube.com/@S0ERDEVS</a>
             </li>
             <li class="item">
-              <div class="item-title"></div>
-              <a class="item-link" href="" target="_blank" alt=""></a>
+              <div class="item-title">Канал Management Channel - для тимлидов и руководителей</div>
+              <a class="item-link" href="https://www.youtube.com/@ManagementChannel" target="_blank" alt="">https://www.youtube.com/@ManagementChannel</a>
             </li>
             <li class="item">
               <div class="item-title"></div>
@@ -1108,15 +1108,27 @@
         </div>
 
         <div class="theme">
-          <h2 class="title-theme">Node.js</h2>
+          <h2 class="title-theme">Node.js, Nest.js, Express.js, MongoDB</h2>
           <ul class="list">
             <li class="item">
               <div class="item-title">How to build a REST API with Node js & Express</div>
               <a class="item-link" href="https://www.youtube.com/watch?v=pKd0Rpw7O48" target="_blank" alt="">https://www.youtube.com/watch?v=pKd0Rpw7O48</a>
             </li>
             <li class="item">
-              <div class="item-title"></div>
-              <a class="item-link" href="" target="_blank" alt=""></a>
+              <div class="item-title">CRUD application with NestJS and MongoDB using Mongoose</div>
+              <a class="item-link" href="https://medium.com/globant/crud-application-using-nestjs-and-mongodb-99a0756adb76" target="_blank" alt="">https://medium.com/globant/crud-application-using-nestjs-and-mongodb-99a0756adb76</a>
+            </li>
+            <li class="item">
+              <div class="item-title">Пошагово. BUILD NEST.JS CRUD API WITH MONGODB</div>
+              <a class="item-link" href="https://www.topcoder.com/thrive/articles/build-nest-js-crud-api-with-mongodb?utm_source=thrive&utm_campaign=thrive-feed&utm_medium=rss-feed" target="_blank" alt="">https://www.topcoder.com/thrive/articles/build-nest-js-crud-api-with-mongodb?utm_source=thrive&utm_campaign=thrive-feed&utm_medium=rss-feed</a>
+            </li>
+            <li class="item">
+              <div class="item-title">Логин на несте через гитхаб</div>
+              <a class="item-link" href="https://blog.logrocket.com/social-logins-nestjs/" target="_blank" alt="">https://blog.logrocket.com/social-logins-nestjs/</a>
+            </li>
+            <li class="item">
+              <div class="item-title">Express - Template engines</div>
+              <a class="item-link" href="https://expressjs.com/en/resources/template-engines.html" target="_blank" alt="">https://expressjs.com/en/resources/template-engines.html</a>
             </li>
             <li class="item">
               <div class="item-title"></div>
