--- a/index.html
+++ b/index.html
@@ -1138,11 +1138,11 @@
         </div>
 
         <div class="theme">
-          <h2 class="title-theme"></h2>
+          <h2 class="title-theme">Английский</h2>
           <ul class="list">
             <li class="item">
-              <div class="item-title"></div>
-              <a class="item-link" href="" target="_blank" alt=""></a>
+              <div class="item-title">Galaxy. ВЕСЬ АНГЛИЙСКИЙ ЯЗЫК В ОДНОМ КУРСЕ ENGLISH GALAXY  АНГЛИЙСКИЙ С НУЛЯ</div>
+              <a class="item-link" href="https://www.youtube.com/watch?v=BAahBqreWZw&list=PLD6SPjEPomasNzHuJpcS1Fxa2PYf1Bm-x" target="_blank" alt="">https://www.youtube.com/watch?v=BAahBqreWZw&list=PLD6SPjEPomasNzHuJpcS1Fxa2PYf1Bm-x</a>
             </li>
             <li class="item">
               <div class="item-title"></div>
@@ -1448,8 +1448,8 @@
                 target="_blank" alt="">https://www.youtube.com/playlist?list=PLNkWIWHIRwMF2sVLwzRef0Cu5kzAOeRcu</a>
             </li>
             <li class="item">
-              <div class="item-title"></div>
-              <a class="item-link" href="" target="_blank" alt=""></a>
+              <div class="item-title">Введение в graphql (видео, 40 минут)</div>
+              <a class="item-link" href="https://www.youtube.com/watch?v=BVEm3IjrgGI" target="_blank" alt="">https://www.youtube.com/watch?v=BVEm3IjrgGI</a>
             </li>
             <li class="item">
               <div class="item-title"></div>
@@ -1462,8 +1462,8 @@
           <h2 class="title-theme">Next</h2>
           <ul class="list">
             <li class="item">
-              <div class="item-title"></div>
-              <a class="item-link" href="" target="_blank" alt=""></a>
+              <div class="item-title">Курс по next (13 видео) webDev</div>
+              <a class="item-link" href="https://www.youtube.com/playlist?list=PLNkWIWHIRwMHjz7hM5o10BNc6dq0OMd2U" target="_blank" alt="">https://www.youtube.com/playlist?list=PLNkWIWHIRwMHjz7hM5o10BNc6dq0OMd2U</a>
             </li>
             <li class="item">
               <div class="item-title"></div>
@@ -1477,11 +1477,11 @@
         </div>
 
         <div class="theme">
-          <h2 class="title-theme"></h2>
+          <h2 class="title-theme">Vue</h2>
           <ul class="list">
             <li class="item">
-              <div class="item-title"></div>
-              <a class="item-link" href="" target="_blank" alt=""></a>
+              <div class="item-title">Весь vue за 3 часа (видео) Ulbi TV</div>
+              <a class="item-link" href="https://www.youtube.com/watch?v=XzLuMtDelGk" target="_blank" alt="">https://www.youtube.com/watch?v=XzLuMtDelGk</a>
             </li>
             <li class="item">
               <div class="item-title"></div>
