feat: add some link

--- a/index.html
+++ b/index.html
@@ -1271,6 +1271,47 @@
                 alt="">https://www.youtube.com/watch?v=-8WEd578fFw</a>
             </li>
             <li class="item">
+              <div class="item-title">rtk-query документация</div>
+              <a class="item-link" href="https://redux-toolkit.js.org/rtk-query/overview" target="_blank" alt="">https://redux-toolkit.js.org/rtk-query/overview</a>
+            </li>
+            <li class="item">
+              <div class="item-title">Продвинутый Redux. Redux Toolkit, RTK query, TypeScript.(видео, 45 минут) Ulbi TV</div>
+              <a class="item-link" href="https://www.youtube.com/watch?v=Od5H_CiU2vM" target="_blank" alt="">https://www.youtube.com/watch?v=Od5H_CiU2vM</a>
+            </li>
+            <li class="item">
+              <div class="item-title"></div>
+              <a class="item-link" href="" target="_blank" alt=""></a>
+            </li>
+          </ul>
+        </div>
+
+
+        <div class="theme">
+          <h2 class="title-theme">Material UI</h2>
+          <ul class="list">
+            <li class="item">
+              <div class="item-title">Библиотека компонентов Material UI. Быстрый старт (видео, 50 минут) Непомнящий</div>
+              <a class="item-link" href="https://www.youtube.com/watch?v=OZ_FUaV_xbg" target="_blank" alt="">https://www.youtube.com/watch?v=OZ_FUaV_xbg</a>
+            </li>
+            <li class="item">
+              <div class="item-title"></div>
+              <a class="item-link" href="" target="_blank" alt=""></a>
+            </li>
+            <li class="item">
+              <div class="item-title"></div>
+              <a class="item-link" href="" target="_blank" alt=""></a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="theme">
+          <h2 class="title-theme">Typescript</h2>
+          <ul class="list">
+            <li class="item">
+              <div class="item-title">Фишки TypeScript о которых ТЫ НЕ ЗНАЛ! (видео, 30 минут) Ulbi TV</div>
+              <a class="item-link" href="https://www.youtube.com/watch?v=VBpmbqTi86Y" target="_blank" alt="">https://www.youtube.com/watch?v=VBpmbqTi86Y</a>
+            </li>
+            <li class="item">
               <div class="item-title"></div>
               <a class="item-link" href="" target="_blank" alt=""></a>
             </li>
