feat: add memory note code npm

--- a/index.html
+++ b/index.html
@@ -1539,6 +1539,28 @@
 
 
         <div class="theme">
+          <h2 class="title-theme">Шпаргалкa</h2>
+          <ul class="list">
+            <li class="item">
+              <div class="item-title">разворачивание проекта на vite</div>
+              <div class="item-code">npm init vite@latest</div>
+            </li>
+            <li class="item">
+              <div class="item-title">установка redux, redux tk</div>
+              <div class="item-code">npm install @reduxjs/toolkit</div>
+              <div class="item-code">npm install react-redux</div>
+              <div class="item-code">npm install @types/react-redux</div>
+              <div>...</div>
+              <div class="item-code">npm install @reduxjs/toolkit react-redux @types/react-redux</div>
+            </li>
+            <li class="item">
+              <div class="item-title"></div>
+              <div class="item-code"></div>
+            </li>
+          </ul>
+        </div>
+
+        <div class="theme">
           <h2 class="title-theme"></h2>
           <ul class="list">
             <li class="item">
