feat: add redux link

--- a/index.html
+++ b/index.html
@@ -1265,6 +1265,10 @@
           <h2 class="title-theme">Redux, RTKQuery</h2>
           <ul class="list">
             <li class="item">
+              <div class="item-title">Redux Toolkit для управления состоянием в React-приложении (видео, 1 час) Непомнящий</div>
+              <a class="item-link" href="https://www.youtube.com/watch?v=C0fBnil_Im4&list=PLiZoB8JBsdznQv3kAEvTzDP2qjaUI8Vo7" target="_blank" alt="">https://www.youtube.com/watch?v=C0fBnil_Im4&list=PLiZoB8JBsdznQv3kAEvTzDP2qjaUI8Vo7</a>
+            </li>
+            <li class="item">
               <div class="item-title">RTK Query Tutorial - How to Fetch Data With Redux Toolkit Query | React Beginners
                 Tutorial (видео, 17 минут)</div>
               <a class="item-link" href="https://www.youtube.com/watch?v=-8WEd578fFw" target="_blank"
@@ -1277,6 +1281,14 @@
             <li class="item">
               <div class="item-title">Продвинутый Redux. Redux Toolkit, RTK query, TypeScript.(видео, 45 минут) Ulbi TV</div>
               <a class="item-link" href="https://www.youtube.com/watch?v=Od5H_CiU2vM" target="_blank" alt="">https://www.youtube.com/watch?v=Od5H_CiU2vM</a>
+            </li>
+            <li class="item">
+              <div class="item-title">Redux (курс, 9 видео) Ulbi TV</div>
+              <a class="item-link" href="https://www.youtube.com/playlist?list=PL6DxKON1uLOHsBCJ_vVuvRsW84VnqmPp6" target="_blank" alt="">https://www.youtube.com/playlist?list=PL6DxKON1uLOHsBCJ_vVuvRsW84VnqmPp6</a>
+            </li>
+            <li class="item">
+              <div class="item-title"></div>
+              <a class="item-link" href="" target="_blank" alt=""></a>
             </li>
             <li class="item">
               <div class="item-title"></div>
