feat: add mui and formik

--- a/index.html
+++ b/index.html
@@ -1566,8 +1566,61 @@
               <div class="item-code">npm install @reduxjs/toolkit react-redux @types/react-redux</div>
             </li>
             <li class="item">
+              <div class="item-title">установка formik и yap</div>
+              <div class="item-code">npm install formik --save</div>
+              <div class="item-code">npm install yup --save</div>
+            </li>
+            <li class="item">
+              <div class="item-title">установка mui 5</div>
+              <div class="item-code">npm install @mui/material @emotion/react @emotion/styled</div>
+            </li>
+            <li class="item">
               <div class="item-title"></div>
               <div class="item-code"></div>
+            </li>
+          </ul>
+        </div>
+
+        <div class="theme">
+          <h2 class="title-theme">Полезные или красивые библиотеки</h2>
+          <ul class="list">
+            <li class="item">
+              <div class="item-title">FORMIK - Создание React формы с валидацией (видео, 15 минут) Герасимов</div>
+              <a class="item-link" href="https://www.youtube.com/watch?v=qmfLQpzEwzw" target="_blank" alt="">https://www.youtube.com/watch?v=qmfLQpzEwzw</a>
+            </li>
+            <li class="item">
+              <div class="item-title">Библиотека компонентов Material UI. Быстрый старт (видео, 1 час) Непомнящий</div>
+              <a class="item-link" href="https://www.youtube.com/watch?v=OZ_FUaV_xbg" target="_blank" alt="">https://www.youtube.com/watch?v=OZ_FUaV_xbg</a>
+            </li>
+            <li class="item">
+              <div class="item-title"></div>
+              <a class="item-link" href="" target="_blank" alt=""></a>
+            </li>
+            <li class="item">
+              <div class="item-title"></div>
+              <a class="item-link" href="" target="_blank" alt=""></a>
+            </li>
+            <li class="item">
+              <div class="item-title"></div>
+              <a class="item-link" href="" target="_blank" alt=""></a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="theme">
+          <h2 class="title-theme"></h2>
+          <ul class="list">
+            <li class="item">
+              <div class="item-title"></div>
+              <a class="item-link" href="" target="_blank" alt=""></a>
+            </li>
+            <li class="item">
+              <div class="item-title"></div>
+              <a class="item-link" href="" target="_blank" alt=""></a>
+            </li>
+            <li class="item">
+              <div class="item-title"></div>
+              <a class="item-link" href="" target="_blank" alt=""></a>
             </li>
           </ul>
         </div>
