feat: formik & mui

--- a/index.html
+++ b/index.html
@@ -1575,6 +1575,10 @@
               <div class="item-code">npm install @mui/material @emotion/react @emotion/styled</div>
             </li>
             <li class="item">
+              <div class="item-title">формик и муи вместе</div>
+              <div class="item-code">npm i formik-mui</div>
+            </li>
+            <li class="item">
               <div class="item-title"></div>
               <div class="item-code"></div>
             </li>
