feat: add links

--- a/index.html
+++ b/index.html
@@ -1662,11 +1662,11 @@
         </div>
 
         <div class="theme">
-          <h2 class="title-theme"></h2>
+          <h2 class="title-theme">EsLint и Prettier</h2>
           <ul class="list">
             <li class="item">
-              <div class="item-title"></div>
-              <a class="item-link" href="" target="_blank" alt=""></a>
+              <div class="item-title">Настройка EsLint и Prettier</div>
+              <a class="item-link" href="https://dev.to/eprikhodko/eslint-prettier-vs-code-create-react-app-airbnb-52bc" target="_blank" alt="">https://dev.to/eprikhodko/eslint-prettier-vs-code-create-react-app-airbnb-52bc</a>
             </li>
             <li class="item">
               <div class="item-title"></div>
