--- a/index.html
+++ b/index.html
@@ -1564,8 +1564,8 @@
               <a class="item-link" href="https://t.me/FigmaMaket" target="_blank" alt="">https://t.me/FigmaMaket</a>
             </li>
             <li class="item">
-              <div class="item-title"></div>
-              <a class="item-link" href="" target="_blank" alt=""></a>
+              <div class="item-title">Страничка с выбором теней</div>
+              <a class="item-link" href="https://getcssscan.com/css-box-shadow-examples" target="_blank" alt="">https://getcssscan.com/css-box-shadow-examples</a>
             </li>
             <li class="item">
               <div class="item-title"></div>
