feat: add links

--- a/index.html
+++ b/index.html
@@ -1565,7 +1565,8 @@
             </li>
             <li class="item">
               <div class="item-title">Страничка с выбором теней</div>
-              <a class="item-link" href="https://getcssscan.com/css-box-shadow-examples" target="_blank" alt="">https://getcssscan.com/css-box-shadow-examples</a>
+              <a class="item-link" href="https://getcssscan.com/css-box-shadow-examples" target="_blank"
+                alt="">https://getcssscan.com/css-box-shadow-examples</a>
             </li>
             <li class="item">
               <div class="item-title"></div>
@@ -1666,7 +1667,9 @@
           <ul class="list">
             <li class="item">
               <div class="item-title">Настройка EsLint и Prettier</div>
-              <a class="item-link" href="https://dev.to/eprikhodko/eslint-prettier-vs-code-create-react-app-airbnb-52bc" target="_blank" alt="">https://dev.to/eprikhodko/eslint-prettier-vs-code-create-react-app-airbnb-52bc</a>
+              <a class="item-link" href="https://dev.to/eprikhodko/eslint-prettier-vs-code-create-react-app-airbnb-52bc"
+                target="_blank"
+                alt="">https://dev.to/eprikhodko/eslint-prettier-vs-code-create-react-app-airbnb-52bc</a>
             </li>
             <li class="item">
               <div class="item-title"></div>
@@ -1675,6 +1678,75 @@
             <li class="item">
               <div class="item-title"></div>
               <a class="item-link" href="" target="_blank" alt=""></a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="theme">
+          <h2 class="title-theme">Работа с node.js</h2>
+          <ul class="list">
+            <li class="item">
+              <div class="item-title">nodemon</div>
+              <div class="item-code">npm install nodemon -g</div>
+              <div class="item-code">nodemon src/index.js</div>
+            </li>
+            <li class="item">
+              <div class="item-title"></div>
+              <div class="item-code"></div>
+            </li>
+            <li class="item">
+              <div class="item-title"></div>
+              <div class="item-code"></div>
+            </li>
+          </ul>
+        </div>
+
+        <div class="theme">
+          <h2 class="title-theme">Ссылки на RS-school</h2>
+          <ul class="list">
+            <li class="item">
+              <div class="item-title">События сообщества</div>
+              <a class="item-link" href="https://wearecommunity.io/events" target="_blank"
+                alt="">https://wearecommunity.io/events</a>
+            </li>
+            <li class="item">
+              <div class="item-title">
+                Подготовительный курс «JavaScript/Front-end. Stage 0»</div>
+              <a class="item-link" href="https://wearecommunity.io/events/js-stage0-rs-2023q2" target="_blank"
+                alt="">https://wearecommunity.io/events/js-stage0-rs-2023q2</a>
+            </li>
+            <li class="item">
+              <div class="item-title">RS-school. Подготовительный курс «JavaScript/Front-end. Stage 0»</div>
+              <a class="item-link" href="https://rs.school/js-stage0/" target="_blank"
+                alt="">https://rs.school/js-stage0/</a>
+            </li>
+            <li class="item">
+              <div class="item-title">Понедельный план курса с теорией и практикой. Stage 0. JS/Frontend Development.</div>
+              <a class="item-link" href="https://github.com/rolling-scopes-school/tasks/tree/master/stage0" target="_blank" alt="">https://github.com/rolling-scopes-school/tasks/tree/master/stage0</a>
+            </li>
+            <li class="item">
+              <div class="item-title">Понедельный план курса с теорией и практикой. Stage 1. JS/Frontend Development.</div>
+              <a class="item-link" href="https://github.com/rolling-scopes-school/tasks/tree/master/stage1" target="_blank" alt="">https://github.com/rolling-scopes-school/tasks/tree/master/stage1</a>
+            </li>
+            <li class="item">
+              <div class="item-title">Понедельный план курса с теорией и практикой. Stage 2. JS/Frontend Development. Typescript. </div>
+              <a class="item-link" href="https://github.com/rolling-scopes-school/tasks/tree/master/stage2" target="_blank" alt="">https://github.com/rolling-scopes-school/tasks/tree/master/stage2</a>
+            </li>
+            <li class="item">
+              <div class="item-title">Понедельный план курса с теорией и практикой. Stage 3. React.js.</div>
+              <a class="item-link" href="https://github.com/rolling-scopes-school/tasks/tree/master/react" target="_blank" alt="">https://github.com/rolling-scopes-school/tasks/tree/master/react</a>
+            </li>
+            <li class="item">
+              <div class="item-title">Понедельный план курса с теорией и практикой. Stage 3. Angular.js.</div>
+              <a class="item-link" href="https://github.com/rolling-scopes-school/tasks/tree/master/angular" target="_blank" alt="">https://github.com/rolling-scopes-school/tasks/tree/master/angular</a>
+            </li>
+            <li class="item">
+              <div class="item-title">Понедельный план курса с теорией и практикой. Backend. Node.js.</div>
+              <a class="item-link" href="https://github.com/rolling-scopes-school/tasks/tree/master/node" target="_blank" alt="">https://github.com/rolling-scopes-school/tasks/tree/master/node</a>
+            </li>
+            <li class="item">
+              <div class="item-title">Приложение в котором проходит обучение в RS-school</div>
+              <a class="item-link" href="https://app.rs.school/" target="_blank" alt="">https://app.rs.school/</a>
             </li>
           </ul>
         </div>
