--- a/index.html
+++ b/index.html
@@ -1769,6 +1769,24 @@
           </ul>
         </div>
 
+        <div class="theme">
+          <h2 class="title-theme">Деплой</h2>
+          <ul class="list">
+            <li class="item">
+              <div class="item-title">Deploy Full Stack App to Vercel | React Nodejs Express Mongo | MERN Tutorial</div>
+              <a class="item-link" href="https://www.youtube.com/watch?v=YYmzj5DK_5s" target="_blank" alt="">https://www.youtube.com/watch?v=YYmzj5DK_5s</a>
+            </li>
+            <li class="item">
+              <div class="item-title"></div>
+              <a class="item-link" href="" target="_blank" alt=""></a>
+            </li>
+            <li class="item">
+              <div class="item-title"></div>
+              <a class="item-link" href="" target="_blank" alt=""></a>
+            </li>
+          </ul>
+        </div>
+
 
 
 
