feat: add atomic design

--- a/index.html
+++ b/index.html
@@ -1751,12 +1751,14 @@
           </ul>
         </div>
 
+
+
         <div class="theme">
-          <h2 class="title-theme"></h2>
+          <h2 class="title-theme">Деплой</h2>
           <ul class="list">
             <li class="item">
-              <div class="item-title"></div>
-              <a class="item-link" href="" target="_blank" alt=""></a>
+              <div class="item-title">Deploy Full Stack App to Vercel | React Nodejs Express Mongo | MERN Tutorial</div>
+              <a class="item-link" href="https://www.youtube.com/watch?v=YYmzj5DK_5s" target="_blank" alt="">https://www.youtube.com/watch?v=YYmzj5DK_5s</a>
             </li>
             <li class="item">
               <div class="item-title"></div>
@@ -1770,11 +1772,30 @@
         </div>
 
         <div class="theme">
-          <h2 class="title-theme">Деплой</h2>
+          <h2 class="title-theme">Архитектура приложений</h2>
           <ul class="list">
             <li class="item">
-              <div class="item-title">Deploy Full Stack App to Vercel | React Nodejs Express Mongo | MERN Tutorial</div>
-              <a class="item-link" href="https://www.youtube.com/watch?v=YYmzj5DK_5s" target="_blank" alt="">https://www.youtube.com/watch?v=YYmzj5DK_5s</a>
+              <div class="item-title">Atomic design</div>
+              <a class="item-link" href="https://atomicdesign.bradfrost.com/chapter-2/" target="_blank" alt="">https://atomicdesign.bradfrost.com/chapter-2/</a>
+            </li>
+            <li class="item">
+              <div class="item-title"></div>
+              <a class="item-link" href="" target="_blank" alt=""></a>
+            </li>
+            <li class="item">
+              <div class="item-title"></div>
+              <a class="item-link" href="" target="_blank" alt=""></a>
+            </li>
+          </ul>
+        </div>
+
+
+        <div class="theme">
+          <h2 class="title-theme"></h2>
+          <ul class="list">
+            <li class="item">
+              <div class="item-title"></div>
+              <a class="item-link" href="" target="_blank" alt=""></a>
             </li>
             <li class="item">
               <div class="item-title"></div>
