feat: add interview q

--- a/index.html
+++ b/index.html
@@ -1808,6 +1808,32 @@
           </ul>
         </div>
 
+        <div class="theme">
+          <h2 class="title-theme">Вопросы к собеседованиям</h2>
+          <ul class="list">
+            <li class="item">
+              <div class="item-title">React</div>
+              <a class="item-link" href="https://github.com/rolling-scopes-school/tasks/blob/master/react/questions.md" target="_blank" alt="">https://github.com/rolling-scopes-school/tasks/blob/master/react/questions.md</a>
+            </li>
+            <li class="item">
+              <div class="item-title">Frontend</div>
+              <a class="item-link" href="https://github.com/YauhenKavalchuk/interview-questions" target="_blank" alt="">https://github.com/YauhenKavalchuk/interview-questions</a>
+            </li>
+            <li class="item">
+              <div class="item-title">CoreJS Interview Base</div>
+              <a class="item-link" href="https://github.com/rolling-scopes-school/tasks/blob/master/tasks/interview-basic-coreJS.md" target="_blank" alt="">https://github.com/rolling-scopes-school/tasks/blob/master/tasks/interview-basic-coreJS.md</a>
+            </li>
+            <li class="item">
+              <div class="item-title">CoreJS Interview</div>
+              <a class="item-link" href="https://github.com/rolling-scopes-school/tasks/blob/master/tasks/interview-corejs.md" target="_blank" alt="">https://github.com/rolling-scopes-school/tasks/blob/master/tasks/interview-corejs.md</a>
+            </li>
+            <li class="item">
+              <div class="item-title"></div>
+              <a class="item-link" href="" target="_blank" alt=""></a>
+            </li>
+          </ul>
+        </div>
+
 
 
 
