feat: add links

--- a/index.html
+++ b/index.html
@@ -1331,6 +1331,14 @@
                 target="_blank" alt="">https://www.youtube.com/playlist?list=PL6DxKON1uLOHsBCJ_vVuvRsW84VnqmPp6</a>
             </li>
             <li class="item">
+              <div class="item-title">Самое понятное 13 минутное видео про редакс</div>
+              <a class="item-link" href="https://www.youtube.com/watch?v=jvkhKRHS2TY" target="_blank" alt="">https://www.youtube.com/watch?v=jvkhKRHS2TY</a>
+            </li>
+            <li class="item">
+              <div class="item-title">Странный ИДЕАЛЬНЫЙ учебник по rtk query</div>
+              <a class="item-link" href="https://safronman.gitbook.io/rtk-4-cards-popbnrty/" target="_blank" alt="">https://safronman.gitbook.io/rtk-4-cards-popbnrty/</a>
+            </li>
+            <li class="item">
               <div class="item-title"></div>
               <a class="item-link" href="" target="_blank" alt=""></a>
             </li>
