--- a/index.html
+++ b/index.html
@@ -1161,6 +1161,22 @@
                 alt="">https://expressjs.com/en/resources/template-engines.html</a>
             </li>
             <li class="item">
+              <div class="item-title">Руководство по Node.js, часть 10: стандартные модули, потоки, базы данных, NODE_ENV</div>
+              <a class="item-link" href="https://habr.com/ru/companies/ruvds/articles/425667/" target="_blank" alt="">https://habr.com/ru/companies/ruvds/articles/425667/</a>
+            </li>
+            <li class="item">
+              <div class="item-title">Играемся с Node.js Часть 1 «Пишем свой первый сервер»</div>
+              <a class="item-link" href="https://habr.com/ru/sandbox/123615/" target="_blank" alt="">https://habr.com/ru/sandbox/123615/</a>
+            </li>
+            <li class="item">
+              <div class="item-title">Node.js 2022Q4 Task 1 Solutions Review Task 2 Issuance</div>
+              <a class="item-link" href="https://www.youtube.com/watch?v=9TQbB8zFf9E&list=PLzLiprpVuH8cWO9jbKgmosIZbKieENuxB&index=9&ab_channel=RollingScopesSchool" target="_blank" alt="">https://www.youtube.com/watch?v=9TQbB8zFf9E&list=PLzLiprpVuH8cWO9jbKgmosIZbKieENuxB&index=9&ab_channel=RollingScopesSchool</a>
+            </li>
+            <li class="item">
+              <div class="item-title"></div>
+              <a class="item-link" href="" target="_blank" alt=""></a>
+            </li>
+            <li class="item">
               <div class="item-title"></div>
               <a class="item-link" href="" target="_blank" alt=""></a>
             </li>
@@ -1262,6 +1278,18 @@
                 alt="">https://www.youtube.com/watch?v=8pDqJVdNa44</a>
             </li>
             <li class="item">
+              <div class="item-title">Документация по react router, navigate</div>
+              <a class="item-link" href="https://reactrouter.com/en/main/components/navigate" target="_blank" alt="">https://reactrouter.com/en/main/components/navigate</a>
+            </li>
+            <li class="item">
+              <div class="item-title">Полное руководство по React Router v6. Часть 2 - Продвинутые определения маршрутов</div>
+              <a class="item-link" href="https://it-dev-journal.ru/articles/polnoe-rukovodstvo-po-react-router-v6-opredeleniya-marshrutov" target="_blank" alt="">https://it-dev-journal.ru/articles/polnoe-rukovodstvo-po-react-router-v6-opredeleniya-marshrutov</a>
+            </li>
+            <li class="item">
+              <div class="item-title"></div>
+              <a class="item-link" href="" target="_blank" alt=""></a>
+            </li>
+            <li class="item">
               <div class="item-title"></div>
               <a class="item-link" href="" target="_blank" alt=""></a>
             </li>
@@ -1339,6 +1367,22 @@
               <a class="item-link" href="https://safronman.gitbook.io/rtk-4-cards-popbnrty/" target="_blank" alt="">https://safronman.gitbook.io/rtk-4-cards-popbnrty/</a>
             </li>
             <li class="item">
+              <div class="item-title">METANIT redux</div>
+              <a class="item-link" href="https://metanit.com/web/react/5.3.php" target="_blank" alt="">https://metanit.com/web/react/5.3.php</a>
+            </li>
+            <li class="item">
+              <div class="item-title">KNOWCITY redux, наипонятнейшее</div>
+              <a class="item-link" href="https://www.youtube.com/watch?v=lTnJG4_hlys&ab_channel=knowcity" target="_blank" alt="">https://www.youtube.com/watch?v=lTnJG4_hlys&ab_channel=knowcity</a>
+            </li>
+            <li class="item">
+              <div class="item-title"></div>
+              <a class="item-link" href="" target="_blank" alt=""></a>
+            </li>
+            <li class="item">
+              <div class="item-title"></div>
+              <a class="item-link" href="" target="_blank" alt=""></a>
+            </li>
+            <li class="item">
               <div class="item-title"></div>
               <a class="item-link" href="" target="_blank" alt=""></a>
             </li>
@@ -1379,12 +1423,12 @@
                 alt="">https://www.youtube.com/watch?v=VBpmbqTi86Y</a>
             </li>
             <li class="item">
-              <div class="item-title"></div>
-              <a class="item-link" href="" target="_blank" alt=""></a>
+              <div class="item-title">Хороший учебник по тайпскрипту</div>
+              <a class="item-link" href="https://my-js.org/docs/guide/ts/" target="_blank" alt="">https://my-js.org/docs/guide/ts/</a>
             </li>
             <li class="item">
-              <div class="item-title"></div>
-              <a class="item-link" href="" target="_blank" alt=""></a>
+              <div class="item-title">KNOWCITY typescript</div>
+              <a class="item-link" href="https://www.youtube.com/watch?v=tej4MeqT1SE&ab_channel=knowcity" target="_blank" alt="">https://www.youtube.com/watch?v=tej4MeqT1SE&ab_channel=knowcity</a>
             </li>
           </ul>
         </div>
@@ -1799,11 +1843,11 @@
 
 
         <div class="theme">
-          <h2 class="title-theme"></h2>
+          <h2 class="title-theme">Оптимизация производительности</h2>
           <ul class="list">
             <li class="item">
-              <div class="item-title"></div>
-              <a class="item-link" href="" target="_blank" alt=""></a>
+              <div class="item-title">Оптимизация производительности фронтенда. Часть 2. Event loop, layout, paint, composite</div>
+              <a class="item-link" href="https://habr.com/ru/articles/517594/" target="_blank" alt="">https://habr.com/ru/articles/517594/</a>
             </li>
             <li class="item">
               <div class="item-title"></div>
